# spine-triton

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  VERSION_NUMBER  pyproject.toml  triton-src-hash.txt  triton_shared.cc
.github/: variables.env
.github/instructions/: operator_development_guide.md  proton_usage_guide.md
.github/scripts/: build_rv.zlib.sh
.github/workflows/: code-style-check.yml  publish-gitlab-pypi.yml  test-build-whl.yml
backend/: CMakeLists.txt  compiler.py  driver.c  driver.py  env.py  name.conf  proton.py
backend/include/ExecutionEngine/: CpuProtonRuntime.cpp  SpinePrintRuntime.cpp
cmake/: linux_riscv64.clang.toolchain.cmake  linux_riscv64.toolchain.cmake
examples/: flag_gems_abs.py  flag_gems_adaptiveAvgPool2d.py  flag_gems_amax.py  flag_gems_arange.py  flag_gems_argmax.py  flag_gems_batchnorm.py  flag_gems_bitwise_or.py  flag_gems_bmm.py  flag_gems_clamp.py  flag_gems_conv1d.py  flag_gems_conv2d.py  flag_gems_cos.py  flag_gems_cross_entropy_loss.py  flag_gems_cumsum.py  flag_gems_div.py  flag_gems_dropout.py  flag_gems_eq.py  flag_gems_exp.py  flag_gems_fill.py  flag_gems_ge.py  flag_gems_gelu.py  flag_gems_gt.py  flag_gems_index_put_.py  flag_gems_le.py  flag_gems_log_softmax.py  flag_gems_lt.py  flag_gems_masked_fill.py  flag_gems_max.py  flag_gems_maxpool.py  flag_gems_mean.py  flag_gems_mul.py  flag_gems_mv.py  flag_gems_native_group_norm.py  flag_gems_normal.py  flag_gems_outer.py  flag_gems_prod.py  flag_gems_rand_like.py  flag_gems_resolve_conj.py  flag_gems_rsqrt.py  flag_gems_select_scatter.py  (+10 more)
examples/accuracy/: flag_gems_abs.py  flag_gems_adaptiveAvgPool2d.py  flag_gems_add.py  flag_gems_addmm.py  flag_gems_all.py  flag_gems_any.py  flag_gems_argmax.py  flag_gems_bitwise_and.py  flag_gems_bitwise_not.py  flag_gems_cat.py  flag_gems_contiguous.py  flag_gems_conv1d.py  flag_gems_conv_depthwise2d.py  flag_gems_cross_entropy_loss.py  flag_gems_embedding.py  flag_gems_erf.py  flag_gems_exp.py  flag_gems_fill.py  flag_gems_flip.py  flag_gems_full.py  flag_gems_full_like.py  flag_gems_gather.py  flag_gems_gelu.py  flag_gems_group_norm.py  flag_gems_hstack.py  flag_gems_index_add.py  flag_gems_index_select.py  flag_gems_isinf.py  flag_gems_isnan.py  flag_gems_layernorm.py  flag_gems_log_sigmoid.py  flag_gems_mean_dim.py  flag_gems_min.py  flag_gems_mm.py  flag_gems_mul.py  flag_gems_multinomial.py  flag_gems_ne.py  flag_gems_neg.py  flag_gems_nll_loss.py  flag_gems_nonzero.py  (+29 more)
examples/perf/: addmm.py  batch_norm.py  bmm.py  conv1d.py  conv2d.py  div.py  gelu.py  groupnorm.py  laryernorm.py  mm.py  mv.py  outer.py  per_all.py  perf_basic_arithmetic.py  perf_convolution.py  perf_matrix.py  perf_normalization.py  perf_unary.py  relu.py  silu.py  softmax.py  sub.py
include/triton-shared/Analysis/: OpFoldResultUtils.h  UseAnalysis.h
include/triton-shared/AnalysisStructured/: PtrAnalysis.h
include/triton-shared/Conversion/: CMakeLists.txt
include/triton-shared/Dialect/: CMakeLists.txt
language/cpu/: __init__.py  libdevice.py  utils.py
language/deeplink/: semantic.py
language/smt/: __init__.py  core.py  semantic.py  types.py
language/tle/: __init__.py  core.py
lib/Analysis/: MaskAnalysis.cpp  OpFoldResultUtils.cpp  PtrAnalysis.cpp
lib/AnalysisStructured/: PtrAnalysis.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/TritonToLinalgExperimental/: CMakeLists.txt  CollapseShape.cpp  ConvertScanOpPass.cpp  ReconcileLlvmPtrCastsPass.cpp  ReconcilePtrCastsPass.cpp  ScfbufferStandardizedPass.cpp  TritonToLinalgExperimentalPass.cpp  TritonToPtrPass.cpp
lib/Conversion/XSMTToLinalg/: CMakeLists.txt  XSMTToLinalg.cpp  XSMTToLinalgPass.cpp
lib/Dialect/: CMakeLists.txt
lib/Sanitizer/: CMakeLists.txt
lib/Utils/: Utils.cpp
patch/: support_for_smt_dialect.patch  support_for_whl.patch  triton.patch  triton_support_dl_compile_hint.patch
python/accuracy/: flag_gems_abs.py  flag_gems_add.py  flag_gems_all.py  flag_gems_amax.py  flag_gems_arange.py  flag_gems_batchnorm.py  flag_gems_bitwise_and.py  flag_gems_bitwise_not.py  flag_gems_bitwise_or.py  flag_gems_bmm.py  flag_gems_cat.py  flag_gems_clamp.py  flag_gems_contiguous.py  flag_gems_conv2d.py  flag_gems_cos.py  flag_gems_cumsum.py  flag_gems_div.py  flag_gems_dropout.py  flag_gems_embedding.py  flag_gems_eq.py  flag_gems_erf.py  flag_gems_flash_attention.py  flag_gems_flip.py  flag_gems_full.py  flag_gems_ge.py  flag_gems_gt.py  flag_gems_hstack.py  flag_gems_index_add.py  flag_gems_index_put_.py  flag_gems_index_select.py  flag_gems_isinf.py  flag_gems_isnan.py  flag_gems_layernorm.py  flag_gems_le.py  flag_gems_log_sigmoid.py  flag_gems_log_softmax.py  flag_gems_lt.py  flag_gems_masked_fill.py  flag_gems_max.py  flag_gems_maxpool.py  (+43 more)
python/examples/: test_device_assert.py  test_device_print.py  test_gelu_proton.py  test_mm_silu.py  test_mv_fragment.py  test_pack.py  test_pmu.cpp  test_qwen_06b.py  test_smt_mm.py  test_softmax_fragment.py  test_tle_gemm.py
python/perf/: perf_attention.py  perf_custom_matrix.py  perf_custom_unary.py  perf_elementwise.py  perf_matrix.py  perf_mm_col.py  perf_softmax.py  test_mm_512_fp16.py  test_softmax.py
python/tests/: conftest.py  test_binary_pointwise_ops.py  test_compile_hint.py  test_mmt4d.py  test_pack.py  test_reduction_ops.py  test_special_ops.py  test_unary_pointwise_ops.py  test_unpack.py  test_v2_ops.py  test_v3_ops.py
scripts/: blas-op-test.sh  build.sh  build_llvm_for_sanitizers.sh  build_native.sh  build_whl.sh  build_x86.sh  flaggems_test.sh  run_perf_suite.sh
test/: CMakeLists.txt
tests/: accuracy_utils.py  model_resnet18_test.py  test_binary_pointwise_ops.py  test_blas_ops.py  test_distribution_ops.py  test_norm_ops.py  test_reduction_ops.py  test_smt.py  test_softmax.py  test_special_ops.py  test_unary_pointwise_ops.py  test_v1_ops.py  test_v2_ops.py  test_v3_ops.py
tools/: RegisterTritonSharedDialects.h
tools/spine-triton-opt/: CMakeLists.txt  RegisterSpineTritonDialects.h  spine-triton-opt.cpp
tools/triton-shared-opt/: RegisterTritonSharedDialects.h
(+98 files in other folders)
